--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # Below is a list of people and organizations that have contributed
-# to the autoprefixer_transformer project. Names should be added to the list like
+# to the vdom project. Names should be added to the list like
 # so:
 #
 #   Name/Organization <email address>
